<resources>
    <string name="app_name">IPCTest</string>
    <string name="service_name">IPCRemoteServer</string>
    <string name="action_settings">Settings</string>
    <string name="description">The action below need call the remote service.</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="add">"+"</string>
    <string name="equal">"="</string>
    <string name="unknow_value">"?"</string>
    <string name="search_key">"please input id to search user"</string>
    <string name="search">"search"</string>
</resources>
